# CPURayTracing

./: .gitignore  CMakeLists.txt  CPURayTracing.sln  CPURayTracing.vcxproj  Hammersley.cpp  Hammersley.h  HitTable.h  HitTableList.cpp  HitTableList.h  Jittered.cpp  Jittered.h  MathHelper.cpp  MathHelper.h  MultiJittered.cpp  MultiJittered.h  NRooks.cpp  NRooks.h  Point2.h  Point3.h  README.md  Ray.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h  Sphere.cpp  Sphere.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  main.cpp
inteltbb/tbb/: index.html
inteltbb/tbb/lib/ia32_win/vc14_uwd/: tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
inteltbb/tbb/lib/ia32_win/vc_mt/: tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbbind.lib  tbbbind_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
inteltbb/tbb/lib/intel64_win/vc14_uwd/: tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
inteltbb/tbb/lib/intel64_win/vc_mt/: tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbbind.lib  tbbbind_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
x64/Release/: CPURayTracing.iobj  CPURayTracing.ipdb  CPURayTracing.vcxproj.FileListAbsolute.txt
x64/Release/CPURayTracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPURayTracing.lastbuildstate  CPURayTracing.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
